<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShiftActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="402dp"
        android:text="@string/number_of_employees_txt"
        android:textSize="16sp"
        android:labelFor="@id/newShiftNumOfEmps"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="139dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="329dp"
        android:text="@string/wage_txt"
        android:textSize="16sp"
        android:labelFor="@id/newShiftWage"/>

    <include
        android:id="@+id/btnBack"
        layout="@layout/inner_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_constraintStart_toStartOf="@+id/txtShift"
        app:layout_constraintTop_toTopOf="parent"></include>

    <TextView
        android:id="@+id/txtShift"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_below="@id/btnBack"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/display_new_shift_for_chosen_date_here"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="139dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="122dp"
        android:text="@string/shift_name_txt"
        android:textSize="16sp"
        android:labelFor="@id/newShiftName"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="139dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="191dp"
        android:text="@string/start_time_txt"
        android:textSize="16sp"
        android:labelFor="@id/newShiftStartTime"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="139dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="257dp"
        android:text="@string/end_time_txt"
        android:textSize="16sp"
        android:labelFor="@id/newShiftEndTime"/>

    <EditText
        android:id="@+id/newShiftName"
        android:layout_width="169dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/textView"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <com.FinalProject.TimeEditText
        android:id="@+id/newShiftStartTime"
        android:layout_width="169dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="191dp"
        android:layout_marginEnd="14dp"
        android:layout_toEndOf="@id/textView4"
        android:autofillHints=""
        android:ems="10"
        android:inputType="time"
        android:gravity="center"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/newShiftWage"
        android:layout_width="167dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="329dp"
        android:layout_marginEnd="15dp"
        android:layout_toEndOf="@id/textView5"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/newShiftNumOfEmps"
        android:layout_width="166dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="404dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/textView6"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnAddNewShift"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="129dp"
        android:layout_marginBottom="189dp"
        android:text="@string/insert_new_shift" />

    <com.FinalProject.TimeEditText
        android:id="@+id/newShiftEndTime"
        android:layout_width="168dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="15dp"
        android:layout_toEndOf="@id/textView2"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="time"
        android:gravity="center"
        tools:targetApi="o" />
</RelativeLayout>